--- a/src/components/AsideMenu.astro
+++ b/src/components/AsideMenu.astro
@@ -28,7 +28,7 @@ import LinkButton from "./LinkButton.astro"
   </ul>
 </aside>
 <div id="black">
-    <span id="joke">Made with 🗿🤙</span>
+  <span id="joke">Made with 🗿&#8205;🤙</span>
 </div>
 
 <script>
@@ -67,6 +67,8 @@ import LinkButton from "./LinkButton.astro"
 .hamburger {
   border-radius: 50%;
   position: fixed;
+  right: 3vw;
+  bottom: 3vh;
   right: 3dvw;
   bottom: 3dvh;
   z-index: 999;
@@ -90,8 +92,7 @@ aside {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  height: 100dvh;
+  height: 100%;
   width: 30dvw;
   position: fixed;
   top: 0;
@@ -134,19 +135,22 @@ aside ul li {
   display: flex;
   align-items: center;
   justify-content: center;
+  span {
+    color: var(--white);
+    text-align: center;
+    position: relative;
+    cursor: pointer;
+    left: 17.5vw;
+    left: 17.5dvw;
+  }
+  span:hover {
+    text-decoration: underline;
+  }
+
 }
 #black.is-active {
   opacity: 1;
   visibility: visible;
-}
-#black span {
-  color: var(--white);
-  text-align: center;
-  position: relative;
-  cursor: pointer;
-}
-#black span:hover {
-  text-decoration: underline;
 }
 @media screen and (max-width: 1100px) {
   aside {
@@ -156,11 +160,11 @@ aside ul li {
     left: -60dvw;
   }
   #black span {
-    left: 10vw;
-    left: 10dvw;
+    left: 25vw;
+    left: 25dvw;
   }
 }
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 750px) {
   /*aside ul {
     position: relative;
     bottom: 30px;
@@ -191,6 +195,9 @@ aside ul li {
     left: -80vw;
     width: 70dvw;
     left: -80dvw;
+  }
+  #black span {
+    width: 1px;
   }  
 }
 @media screen and (max-height: 700px) {
@@ -208,5 +215,21 @@ aside ul li {
     bottom: 20px;
   }
 }
-
+@media screen and (max-height: 500px) {
+  aside ul {
+    height: 70%;
+    position: relative;
+  }
+}
+@media screen and (max-height: 400px) {
+  aside ul {
+    height: 90%;
+    position: relative;
+  }
+}@media screen and (max-height: 300px) {
+  aside ul {
+    height: 95%;
+    position: relative;
+  }
+}
 </style>
