--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -57,9 +57,9 @@ import MenuLayout from "../layouts/MenuLayout.astro";
     const now = new Date(Date.now());
     const $dinAge = document.getElementById('age')!;
     $dinAge.innerHTML = timeDifference(now, birthday) + " years";
-    openLink(document.getElementById('city')!, "https://www.google.es/maps/@42.5994036,-5.567528,3a,75y,123.05h,98.96t/data=!3m7!1e1!3m5!1s6ese8ST32f51_9ZTgAo1vw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fpanoid%3D6ese8ST32f51_9ZTgAo1vw%26cb_client%3Dsearch.revgeo_and_fetch.gps%26w%3D96%26h%3D64%26yaw%3D85.89923%26pitch%3D0%26thumbfov%3D100!7i16384!8i8192?entry=ttu");
+    /*openLink(document.getElementById('city')!, "https://www.google.es/maps/@42.5994036,-5.567528,3a,75y,123.05h,98.96t/data=!3m7!1e1!3m5!1s6ese8ST32f51_9ZTgAo1vw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fpanoid%3D6ese8ST32f51_9ZTgAo1vw%26cb_client%3Dsearch.revgeo_and_fetch.gps%26w%3D96%26h%3D64%26yaw%3D85.89923%26pitch%3D0%26thumbfov%3D100!7i16384!8i8192?entry=ttu");
     openLink(document.getElementById('linkedin')!, "https://www.linkedin.com/in/iker-nieto-79985b232/")
     openLink(document.getElementById('github')!, "https://github.com/kinire98");
-    openLink(document.getElementById('cv')!, "/IkerNietoCV.pdf");
+    openLink(document.getElementById('cv')!, "/IkerNietoCV.pdf");*/
 
 </script>
