--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -24,7 +24,7 @@ interface Props {
     has_pages: boolean
 }
 let { name, desc, language, url, has_pages } = Astro.props;
-let pages_url: string = "https://kinire98.github.io/" + name;
+let pages_url: string = `https://kinire98.github.io/${name}`;
 pages_url = pages_url.replace('\0', '');
 language = getRoutesForImage(language);
 ---
