Revert "Build test"
This reverts commit 379025bd86162afe19e0d3f576fcfd2d8b880c9e.

--- a/src/components/HomeTitle.astro
+++ b/src/components/HomeTitle.astro
@@ -14,6 +14,7 @@ $words.forEach(word => {
 
 
 <script>
+    import showLetters from "../helpers/showLetters";
     const $divs = document.querySelectorAll('h1 div');
     let position = 0;
     const INTERVALLENGHT = 10000;
