--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,6 +3,7 @@ import MenuLayout from "../layouts/MenuLayout.astro";
 import ProjectCard from "../components/ProjectCard.astro";
 //import jsonTest from "../helpers/jsontest";
 const res = await fetch("https://api.github.com/users/kinire98/repos");
+
 const json = await res.json();
 //const json = JSON.parse(jsonTest());
 
@@ -14,7 +15,7 @@ const json = await res.json();
         {
             json.map((ob: any) => (
 
-                <ProjectCard client:visible name={ob.name} desc={ob.description} url={ob.html_url} language={ob.language} has_pages={ob.has_pages}/>
+                <ProjectCard name={ob.name} desc={ob.description} url={ob.html_url} language={ob.language} has_pages={ob.has_pages}/>
             ))
         }
         <img src="/github.svg" id="imagen-github"/>
