Revert "Found it"
This reverts commit 32862cded6c775d50fd91d03b61beabaaa486db3.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -14,7 +14,7 @@ const json = await res.json();
         {
             json.map((ob: any) => (
 
-                <ProjectCard name={ob.name} desc={ob.description} url={ob.html_url} language={ob.language} has_pages={ob.has_pages}/>
+                <ProjectCard client:visible name={ob.name} desc={ob.description} url={ob.html_url} language={ob.language} has_pages={ob.has_pages}/>
             ))
         }
         <img src="/github.svg" id="imagen-github"/>
