--- a/src/components/LinkButtonAnim.astro
+++ b/src/components/LinkButtonAnim.astro
@@ -71,4 +71,10 @@ button:hover div {
    transform: translateY(0px);
  }
 }
+@media screen and (max-height: 300px) {
+  button {
+    height: 55px;
+    font-size: 1em;
+  }
+}
 </style>
