--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -141,6 +141,9 @@ span:hover {
     bottom: 1.5vh;
     bottom: 1.5dvh;
   }
+  li {
+    top: 0px;
+  }
   @media screen and (max-height: 550px){
     ul {
       bottom: 25px;
@@ -150,6 +153,14 @@ span:hover {
 @media screen and (max-width: 490px) {
   ul li {
     width: 50%;
+  }
+}
+@media screen and (max-height: 375px) {
+  h1 {
+    display: none;
+  }
+  li {
+    top: 0px;
   }
 }
 </style>
