--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,18 +6,12 @@ import LinkButton from "../components/LinkButton.astro"
 <MenuLayout title="404 - kinire">
     <h1>This isn't the page you are looking for</h1>
     <br><br><br><br><br>
-    <LinkButton content="Go back to home page" path="../" id="home404"/>
+    <LinkButton content="Go back to home page" path="/" id="home404"/>
 </MenuLayout>
 <script>
-
+import openPage from "../helpers/openPage";
 let $home = document.querySelector('button#home404') as HTMLElement;
-    $home?.addEventListener('click', () => {
-        const $a = document.createElement('a');
-        $a.href = $home.dataset!.path!;
-        $a.style.display = 'none';
-        document.body.appendChild($a);
-        $a.click();
-    });
+openPage($home, "/")
 </script>
 <style is:global>
     main {
