--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -36,10 +36,34 @@ import MenuLayout from "../layouts/MenuLayout.astro";
             text-decoration: underline;
         }
         .links {
-            height: 45px
+            height: 45px;
+            filter: drop-shadow(1px 1px 1px var(--black));
+            transition: all .3s;
         }
         * {
             margin-block: 18px;
+        }
+        h1 {
+            text-align: center;
+        }
+        #linkedin:hover {
+            filter: drop-shadow(0 0 5px #0A66C2);
+        }
+        #github:hover {
+            filter: drop-shadow(0 0 5px #181717);
+        }
+        #cv:hover {
+            filter: drop-shadow(0 0 5px var(--cont));
+        }
+    }
+</style>
+<style is:global>
+    body {
+        overflow: hidden;
+    }
+    @media screen and (max-height:500px) {
+        body {
+            overflow: visible;
         }
     }
 </style>
@@ -52,12 +76,15 @@ import MenuLayout from "../layouts/MenuLayout.astro";
         var daysDifference = Math.floor(difference/1000/60/60/24);
         return Math.floor(daysDifference/365);
     }
-
+    // Calculate age
     const birthday = new Date("2005/04/05");
     const now = new Date(Date.now());
     const $dinAge = document.getElementById('age')!;
     $dinAge.innerHTML = timeDifference(now, birthday) + " years";
-    openLink(document.getElementById('city')!, "https://www.google.es/maps/@42.5994036,-5.567528,3a,75y,123.05h,98.96t/data=!3m7!1e1!3m5!1s6ese8ST32f51_9ZTgAo1vw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fpanoid%3D6ese8ST32f51_9ZTgAo1vw%26cb_client%3Dsearch.revgeo_and_fetch.gps%26w%3D96%26h%3D64%26yaw%3D85.89923%26pitch%3D0%26thumbfov%3D100!7i16384!8i8192?entry=ttu");
+
+
+
+    openLink(document.getElementById('city')!, "https://www.google.es/maps/@42.5988904,-5.5671356,3a,75y,10.49h,117.75t/data=!3m6!1e1!3m4!1sfSSR9xEwoRfYVPmFRAxS1A!2e0!7i13312!8i6656?entry=ttu");
     openLink(document.getElementById('linkedin')!, "https://www.linkedin.com/in/iker-nieto-79985b232/")
     openLink(document.getElementById('github')!, "https://github.com/kinire98");
     openLink(document.getElementById('cv')!, "/IkerNietoCV.pdf");
