--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,73 +12,83 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-    <link rel="preload" href="/fonts/NEON_CLUB_MUSIC.otf" as="font" type="font/otf" crossorigin>
+		<link
+			rel="preload"
+			href="/fonts/NEON_CLUB_MUSIC.otf"
+			as="font"
+			type="font/otf"
+			crossorigin
+		/>
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
-    <div class="back" id="back"></div>
-    <div class="back" id="back2"></div>
+		<div class="back" id="back"></div>
+		<div class="back" id="back2"></div>
 	</body>
 </html>
 <style is:global>
-@import '../styles/colors.css';
+	@import "../styles/colors.css";
 
-@font-face {
-  font-family: "neon";
-  src: url('/fonts/NEON_CLUB_MUSIC.otf') format("opentype");
-}
-@font-face {
-  font-family: "neon";
-  font-weight: light;
-  src: url('/fonts/NEON_CLUB_MUSIC_light.otf') format("opentype");
-}
-@font-face {
-  font-family: "neon";
-  font-weight: bold;
-  src: url('/fonts/NEON_CLUB_MUSIC_bold.otf') format("opentype");
-}
-@font-face {
-  font-family: "neon";
-  font-style: italic;
-  src: url('/fonts/NEON_CLUB_MUSIC_italic.otf') format("opentype");
-}
-* {
-  margin: 0;  
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "neon", monospace;
-  text-decoration-color: var(--cont);
-  color: var(--white);
-}
-body {
-  min-width: 100vw;
-  min-width: 100dvw;
-  min-height: 100vh;
-  min-height: 100dvh;
-  background: var(--bgc); 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 50px;
-  overflow-x: hidden;
-}
-.back {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(ellipse farthest-side at bottom, var(--cont-trans), transparent);
-  z-index: -1;
-  top: 0;
-}
-#back {
-  left: 50vw;
-  left: 50dvw;
-}
-#back2 {
-  right: 50vw;
-  right: 50dvw;
-}
+	@font-face {
+		font-family: "neon";
+		src: url("/fonts/NEON_CLUB_MUSIC.otf") format("opentype");
+	}
+	@font-face {
+		font-family: "neon";
+		font-weight: light;
+		src: url("/fonts/NEON_CLUB_MUSIC_light.otf") format("opentype");
+	}
+	@font-face {
+		font-family: "neon";
+		font-weight: bold;
+		src: url("/fonts/NEON_CLUB_MUSIC_bold.otf") format("opentype");
+	}
+	@font-face {
+		font-family: "neon";
+		font-style: italic;
+		src: url("/fonts/NEON_CLUB_MUSIC_italic.otf") format("opentype");
+	}
+	* {
+		margin: 0;
+		padding: 0;
+		box-sizing: border-box;
+		font-family: "neon", monospace;
+		text-decoration-color: var(--cont);
+		color: var(--white);
+	}
+	body {
+		min-width: 100vw;
+		min-width: 100dvw;
+		min-height: 100vh;
+		min-height: 100dvh;
+		background: var(--bgc);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 50px;
+		overflow-x: hidden;
+	}
+	.back {
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		background: radial-gradient(
+			ellipse farthest-side at bottom,
+			var(--cont-trans),
+			transparent
+		);
+		z-index: -1;
+		top: 0;
+	}
+	#back {
+		left: 50vw;
+		left: 50dvw;
+	}
+	#back2 {
+		right: 50vw;
+		right: 50dvw;
+	}
 </style>
