--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,33 +1,33 @@
 ---
-import MenuLayout from "../layouts/MenuLayout.astro"
-import LinkButton from "../components/LinkButton.astro"
+import MenuLayout from "../layouts/MenuLayout.astro";
+import LinkButton from "../components/LinkButton.astro";
 ---
 
 <MenuLayout title="404 - kinire">
-    <h1>This isn't the page you are looking for</h1>
-    <br><br><br><br><br>
-    <LinkButton content="Go back to home page" path="/" id="home404"/>
+	<h1>This isn't the page you are looking for</h1>
+	<br /><br /><br /><br /><br />
+	<LinkButton content="Go back to home page" path="/" id="home404" />
 </MenuLayout>
 <script>
-import openPage from "../helpers/openPage";
-let $home = document.querySelector('button#home404') as HTMLElement;
-openPage($home, "/")
+	import openPage from "../helpers/openPage";
+	let $home = document.querySelector("button#home404") as HTMLElement;
+	openPage($home, "/");
 </script>
 <style is:global>
-    main {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        width: 100%;
-    }
-    h1 {
-        width: 75%; 
-        margin-block: 50px;
-        text-align: center;
-    }
-    #home404 {
-        width: 50%;
-        margin-block: 50px;
-    }
+	main {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		width: 100%;
+	}
+	h1 {
+		width: 75%;
+		margin-block: 50px;
+		text-align: center;
+	}
+	#home404 {
+		width: 50%;
+		margin-block: 50px;
+	}
 </style>
