--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -2,91 +2,107 @@
 import MenuLayout from "../layouts/MenuLayout.astro";
 ---
 
-
 <MenuLayout title="About me - kinire">
-    <div id="wrap">
-        <div id="data-static">
-            <img src="/tank.jpg" alt="Logo" id="logo">
-            <h1>Iker Nieto Garrido</h1>
-            <h2 id="age"></h2>
-            <h3 id="city">León, Spain</h3>
-            <img src="/curri_icons/others/linkedin.svg" alt="LinkedIn Logo" id="linkedin" class="links">
-            <img src="/curri_icons/others/github.svg" alt="Github Logo" id="github" class="links">
-            <img src="/curri_icons/others/cv.svg" alt="CV button" id="cv" class="links">
-        </div>
-        <div id="changed"></div>
-    </div> 
+	<div id="wrap">
+		<div id="data-static">
+			<img src="/tank.jpg" alt="Logo" id="logo" />
+			<h1>Iker Nieto Garrido</h1>
+			<h2 id="age"></h2>
+			<h3 id="city">León, Spain</h3>
+			<img
+				src="/curri_icons/others/linkedin.svg"
+				alt="LinkedIn Logo"
+				id="linkedin"
+				class="links"
+			/>
+			<img
+				src="/curri_icons/others/github.svg"
+				alt="Github Logo"
+				id="github"
+				class="links"
+			/>
+			<img
+				src="/curri_icons/others/cv.svg"
+				alt="CV button"
+				id="cv"
+				class="links"
+			/>
+		</div>
+		<div id="changed"></div>
+	</div>
 </MenuLayout>
 <style>
-    #wrap {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: row;
-    }
-    #data-static {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        #logo {
-            border-radius: 100%;
-        }
-        #city:hover {
-            text-decoration: underline;
-        }
-        .links {
-            height: 45px;
-            filter: drop-shadow(1px 1px 1px var(--black));
-            transition: all .3s;
-        }
-        * {
-            margin-block: 18px;
-        }
-        h1 {
-            text-align: center;
-        }
-        #linkedin:hover {
-            filter: drop-shadow(0 0 5px #0A66C2);
-        }
-        #github:hover {
-            filter: drop-shadow(0 0 5px #181717);
-        }
-        #cv:hover {
-            filter: drop-shadow(0 0 5px var(--cont));
-        }
-    }
+	#wrap {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: row;
+	}
+	#data-static {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		#logo {
+			border-radius: 100%;
+		}
+		#city:hover {
+			text-decoration: underline;
+		}
+		.links {
+			height: 45px;
+			filter: drop-shadow(1px 1px 1px var(--black));
+			transition: all 0.3s;
+		}
+		* {
+			margin-block: 18px;
+		}
+		h1 {
+			text-align: center;
+		}
+		#linkedin:hover {
+			filter: drop-shadow(0 0 5px #0a66c2);
+		}
+		#github:hover {
+			filter: drop-shadow(0 0 5px #181717);
+		}
+		#cv:hover {
+			filter: drop-shadow(0 0 5px var(--cont));
+		}
+	}
 </style>
 <style is:global>
-    body {
-        overflow: hidden;
-    }
-    @media screen and (max-height:500px) {
-        body {
-            overflow: visible;
-        }
-    }
+	body {
+		overflow: hidden;
+	}
+	@media screen and (max-height: 500px) {
+		body {
+			overflow: visible;
+		}
+	}
 </style>
 
-
 <script>
-    import openLink from "../helpers/openLink";
-    function timeDifference(date1: Date, date2: Date): number {
-        var difference = date1.getTime() - date2.getTime();
-        var daysDifference = Math.floor(difference/1000/60/60/24);
-        return Math.floor(daysDifference/365);
-    }
-    // Calculate age
-    const birthday = new Date("2005/04/05");
-    const now = new Date(Date.now());
-    const $dinAge = document.getElementById('age')!;
-    $dinAge.innerHTML = timeDifference(now, birthday) + " years";
+	import openLink from "../helpers/openLink";
+	function timeDifference(date1: Date, date2: Date): number {
+		var difference = date1.getTime() - date2.getTime();
+		var daysDifference = Math.floor(difference / 1000 / 60 / 60 / 24);
+		return Math.floor(daysDifference / 365);
+	}
+	// Calculate age
+	const birthday = new Date("2005/04/05");
+	const now = new Date(Date.now());
+	const $dinAge = document.getElementById("age")!;
+	$dinAge.innerHTML = timeDifference(now, birthday) + " years";
 
-
-
-    openLink(document.getElementById('city')!, "https://www.google.es/maps/@42.5988904,-5.5671356,3a,75y,10.49h,117.75t/data=!3m6!1e1!3m4!1sfSSR9xEwoRfYVPmFRAxS1A!2e0!7i13312!8i6656?entry=ttu");
-    openLink(document.getElementById('linkedin')!, "https://www.linkedin.com/in/iker-nieto-79985b232/")
-    openLink(document.getElementById('github')!, "https://github.com/kinire98");
-    openLink(document.getElementById('cv')!, "/IkerNietoCV.pdf");
-
+	openLink(
+		document.getElementById("city")!,
+		"https://www.google.es/maps/@42.5988904,-5.5671356,3a,75y,10.49h,117.75t/data=!3m6!1e1!3m4!1sfSSR9xEwoRfYVPmFRAxS1A!2e0!7i13312!8i6656?entry=ttu"
+	);
+	openLink(
+		document.getElementById("linkedin")!,
+		"https://www.linkedin.com/in/iker-nieto-79985b232/"
+	);
+	openLink(document.getElementById("github")!, "https://github.com/kinire98");
+	openLink(document.getElementById("cv")!, "/IkerNietoCV.pdf");
 </script>
