--- a/src/pages/blog/all.astro
+++ b/src/pages/blog/all.astro
@@ -6,82 +6,84 @@ import LinkButton from "../../components/LinkButton.astro";
 
 let posts: any[];
 try {
-    posts = await Astro.glob('./*.md');
+	posts = await Astro.glob("./*.md");
 } catch (error) {
-    posts = [];
+	posts = [];
 }
-
 ---
 
-
 <MenuLayout title="Blog - all entries - kinire">
-    <div id="blog-page">
-        <Title content="Blog - all entries"/>
-        {posts.length === 0 ? <h2 id="nothing">There are no posts, yet</h2> : ""}
-        <div id="blog-posts">
-            {
-                posts.length === 0 
-                ? ""
-                : posts.map(post => (
-                    <ReducedBlogEntry title={ post.frontmatter.article } author={ post.frontmatter.author } date={ post.frontmatter.date } url={ post.url! }/>
-                ))
-            }
-        </div>
-        <LinkButton content="See featured posts" id="featured-posts" path="/blog"/>
-    </div>
+	<div id="blog-page">
+		<Title content="Blog - all entries" />
+		{posts.length === 0 ? <h2 id="nothing">There are no posts, yet</h2> : ""}
+		<div id="blog-posts">
+			{
+				posts.length === 0
+					? ""
+					: posts.map((post) => (
+							<ReducedBlogEntry
+								title={post.frontmatter.article}
+								author={post.frontmatter.author}
+								date={post.frontmatter.date}
+								url={post.url!}
+							/>
+						))
+			}
+		</div>
+		<LinkButton content="See featured posts" id="featured-posts" path="/blog" />
+	</div>
 </MenuLayout>
 
 <script>
-    import showLetters from "../../helpers/showLetters";
-    import openLink from "../../helpers/openPage";
+	import showLetters from "../../helpers/showLetters";
+	import openLink from "../../helpers/openPage";
 
-    showLetters(document.querySelector('h2')! as HTMLElement, 10000);
+	showLetters(document.querySelector("h2")! as HTMLElement, 10000);
 
-    const $but = document.getElementById("featured-posts")! as HTMLElement;
-    openLink($but, $but.dataset.path!);
+	const $but = document.getElementById("featured-posts")! as HTMLElement;
+	openLink($but, $but.dataset.path!);
 
-    document.querySelectorAll('figure').forEach((element) => {
-        let el = element as HTMLElement;
-        openLink(el, el.dataset.url!)
-
-    });
+	document.querySelectorAll("figure").forEach((element) => {
+		let el = element as HTMLElement;
+		openLink(el, el.dataset.url!);
+	});
 </script>
 
 <style is:global>
-    #blog-page {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        min-width: 100vw;
-        min-width: 100dvw;
-        min-height: 100vh;
-        min-height: 100dvh;
-    }
-    #blog-posts {
-        display: inline-grid;
-        grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
-        margin: 0;
-        width: 80%;
-    }
-    #nothing {
-        opacity: 0;
-        animation: appear 4s ease-out forwards;
-    }
-    .prog-title {
-        margin-block: 50px;
-    }
-    #featured-posts {
-        width: 25%;
-    }
-    @keyframes appear {
-        0% {
-            transform: translateY(-15px);
-            opacity: 0;
-        }
-        100% {
-            transform: translateY(0px);
-            opacity: 1;
-        }
-    }
+	#blog-page {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		min-width: 100vw;
+		min-width: 100dvw;
+		min-height: 100vh;
+		min-height: 100dvh;
+	}
+	#blog-posts {
+		display: inline-grid;
+		grid-template-columns: repeat(auto-fill, minmax(35rem, 1fr));
+		margin: 0;
+		width: 80%;
+	}
+	#nothing {
+		opacity: 0;
+		animation: appear 4s ease-out forwards;
+	}
+	.prog-title {
+		margin-block: 50px;
+	}
+	#featured-posts {
+		width: 25%;
+	}
+	@keyframes appear {
+		0% {
+			transform: translateY(-15px);
+			opacity: 0;
+		}
+		100% {
+			transform: translateY(0px);
+			opacity: 1;
+		}
+	}
 </style>
