--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,4 @@
 import MenuLayout from "../layouts/MenuLayout.astro";
 ---
 
-
-<MenuLayout title="Contact - kinire">
-    
-</MenuLayout>
+<MenuLayout title="Contact - kinire" />
